# UI_IMPL

./: CMakeLists.txt  README.md  main.cpp
include/: ICompact.h  ILogger.h  ISet.h  lib_Export.h
src/: CMakeLists.txt
src/Application/: Application.pro  main.cpp
src/ICompact/: CMakeLists.txt  ICompact.cpp  ICompact_Impl.cpp
src/ILogger/: CMakeLists.txt  ILogger.cpp  ILogger_Impl.cpp
src/IProblem/: IBrocker.h  ICompact.h  IProblem.cpp  IProblem.h  IProblem.pro  IProblem_Impl.cpp  IProblem_global.h
src/ISet/: CMakeLists.txt  ISet.cpp  ISet_Impl.cpp
src/ISolver/: IBrocker.h  ISolver.cpp  ISolver.h  ISolver.pro  ISolver_Impl.cpp  ISolver_global.h  IVector.h
src/IVector/: CMakeLists.txt  IVector.cpp  IVector_Impl.cpp  main.cpp
src/build-Application-Desktop_Qt_5_15_0_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  log_out.txt
src/build-IProblem-Desktop_Qt_5_15_0_MinGW_32_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
src/build-ISolver-Desktop_Qt_5_15_0_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
test/: CMakeLists.txt
test/ICompact/: CMakeLists.txt  compact-test-main.cpp  compact-test-main.h
test/ISet/: CMakeLists.txt  set-test-clear.cpp  set-test-clone.cpp  set-test-erase.cpp  set-test-get.cpp  set-test-insert.cpp  set-test-main.cpp  set-test-main.h
test/IVector/: CMakeLists.txt  vector-test-add.cpp  vector-test-clone.cpp  vector-test-main.cpp  vector-test-main.h  vector-test-mul-scalar.cpp  vector-test-mul-vector.cpp  vector-test-sub.cpp
